<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_brick</name>
  <version>0.0.0</version>
  <description>A package for ME 495 Hw2. Simulates a turtle catching a brick.</description>
  <maintainer email="oubrejames@gmail.com">oubre</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend> 
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>turtle_brick_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
